--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="caching.appcache">
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
