--- a/ui/index.html
+++ b/ui/index.html
@@ -64,9 +64,14 @@
 </head>
 
 <body>
-<div id="page">
+
+<div id="page" align="middle">
     <!-- React -->
-    <p class="loading-message">Loading...</p>
+    <div class="flex-container">
+        <div><img src="https://i.ibb.co/2Zp0pyw/weblogo.png" height="100" width="260"></div>
+        <div class="loader"></div>
+    </div>
+    
 </div>
 
 <!-- The main Blockly files -->
