Mode selector upgrade

--- a/ui/index.html
+++ b/ui/index.html
@@ -70,6 +70,7 @@
     <div class="flex-container">
         <div><img src="https://i.ibb.co/2Zp0pyw/weblogo.png" height="100" width="260"></div>
         <div class="loader"></div>
+        <div style="color: white; font-size: 20px">v3.1.0</div>
     </div>
     
 </div>
