--- a/ui/index.html
+++ b/ui/index.html
@@ -51,6 +51,9 @@
     <script src="lib/xterm.js/xterm.js"></script>
     <script src="lib/xterm.js/addons/fit/fit.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+
+
     <link rel="stylesheet" href="fonts/icons/css/fontello.css"/>
     <link rel="stylesheet" href="picnic/picnic.css"/>
 
