--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,7 @@
     <meta property="og:image" content="https://i.ibb.co/Rc59ggz/ebMeta.png">
     <meta property="og:url" content="https://edublocks.org">
 
-    <meta name="theme-color" content="#396afc">
+    <meta name="theme-color" content="#1B173D">
 
     <meta name="twitter:title" content="EduBlocks">
     <meta name="twitter:description"
@@ -105,6 +105,11 @@
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(ur, s);
     })();
+</script>
+
+<script src="consoleimg.min.js"></script>
+<script>
+    consoleimg.load('https://i.ibb.co/2Zp0pyw/weblogo.png', {size: 150})
 </script>
 
 
