--- a/ui/ws.html
+++ b/ui/ws.html
@@ -4,7 +4,7 @@
 <head>
   <script type="text/javascript">
     document.addEventListener('click', function () {
-      var ws = new WebSocket("ws://127.0.0.1:8080/terminal");
+      var ws = new WebSocket("wss://127.0.0.1:8080/terminal");
 
       ws.onopen = function () {
         ws.send("Hello, world");
