--- a/ui/index.html
+++ b/ui/index.html
@@ -110,6 +110,7 @@
 <script src="consoleimg.min.js"></script>
 <script>
     consoleimg.load('https://i.ibb.co/2Zp0pyw/weblogo.png', {size: 150})
+    response.setHeader("Set-Cookie", "HttpOnly;Secure;SameSite=Strict");
 </script>
 
 
