--- a/ui/index.html
+++ b/ui/index.html
@@ -38,7 +38,7 @@
 
     <meta name="x-host-type" content=""/>
 
-    <title>edublocks</title>
+    <title>EduBlocks</title>
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
 
